# llm-mlx

./: README.md  pyproject.toml
notebooks/: gemma2b-jpn.ipynb
