[project]
name = "local_llm"
version = "0.1.0"
description = "test_env for gemmma2b-jp"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "requests>=2.32.3",
    "openai-whisper>=20240930",
    "transformers>=4.45.1",
    "ipywidgets>=8.1.5",
    "mlx-lm>=0.19.0",
    "peft>=0.13.0",
]

[tool.ruff]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".venv", "third_party"]
line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []
select = [
    "A",  # flake8-builtin
    "B",  # flake8-bugbear
    "E",  # pycodestyle error
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W",  # pycodestyle warning
    "PL",  # Pylint
    "UP",  # pyupgrade
]
ignore = [
    "F401",  # Unused import
    "I001",  # Import alias
    "PLR2004",
    "PLR0913",
    "PLW2901",
    "N803",
    "N806",
    "N812",
]


[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
